--- a/hopguides-web/package.json
+++ b/hopguides-web/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"proxy": "http://localhost:3000",
 	"dependencies": {
+		"react-yandex-maps": "^4.6.0",
 		"@date-io/date-fns": "^1.3.13",
 		"@date-io/dayjs": "^2.11.0",
 		"@date-io/luxon": "^2.11.1",
