--- a/hopguides-web/package.json
+++ b/hopguides-web/package.json
@@ -4,7 +4,6 @@
 	"private": true,
 	"proxy": "http://localhost:3000",
 	"dependencies": {
-		"react-yandex-maps": "^4.6.0",
 		"@date-io/date-fns": "^1.3.13",
 		"@date-io/dayjs": "^2.11.0",
 		"@date-io/luxon": "^2.11.1",
@@ -18,6 +17,7 @@
 		"@material-ui/lab": "^4.0.0-alpha.60",
 		"@mui/icons-material": "^5.0.0",
 		"@mui/material": "^5.0.0",
+		"@mui/x-date-pickers": "^5.0.15",
 		"@testing-library/jest-dom": "^5.11.10",
 		"@testing-library/react": "^11.2.6",
 		"@testing-library/user-event": "^12.8.3",
@@ -26,6 +26,7 @@
 		"connected-react-router": "^6.9.1",
 		"cors": "^2.8.5",
 		"date-fns": "^2.0.0-beta.5",
+		"dayjs": "^1.11.7",
 		"formik": "^2.2.9",
 		"i18next": "^21.9.1",
 		"i18next-browser-languagedetector": "^6.1.5",
@@ -35,6 +36,7 @@
 		"moment": "^2.29.1",
 		"mui-datatables": "^3.7.8",
 		"pdfjs-dist": "^2.6.347",
+		"rc-time-picker": "^3.7.3",
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.6.1",
 		"react-date-picker": "^8.3.2",
@@ -48,13 +50,16 @@
 		"react-moment": "^1.1.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"react-time-picker": "^5.2.0",
 		"react-validation": "^3.0.7",
 		"react-widgets": "^5.2.0",
+		"react-yandex-maps": "^4.6.0",
 		"web-vitals": "^1.1.1",
 		"yup": "^0.32.9"
 	},
 	"devDependencies": {
-		"env-cmd": "^8.0.2"
+		"env-cmd": "^8.0.2",
+		"tailwindcss": "^3.2.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
