--- a/hopguides-web/package.json
+++ b/hopguides-web/package.json
@@ -54,9 +54,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
-		"web-vitals": "^2.1.4",
-		"react-bootstrap": "^1.6.1",
-		"bootstrap": "^3.2.0"
+		"web-vitals": "^2.1.4"
 	},
 	"devDependencies": {
 		"tailwindcss": "^3.2.4"
