--- a/hopguides-web/package.json
+++ b/hopguides-web/package.json
@@ -47,6 +47,8 @@
 		"react-validation": "^3.0.7",
 		"react-widgets": "^5.2.0",
 		"react-yandex-maps": "^4.6.0",
+		"bootstrap": "^3.2.0",
+		"react-bootstrap": "^1.6.1",
 		"yup": "^0.32.9",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
